<resources>
    <string name="app_name">Scanner</string>
    <string name="qr_barcode">QR &amp; Barcode</string>
    <string name="scanner">Scanner</string>
    <string name="app_language">App Language</string>
    <string name="language">Language</string>
    <string name="gallery">Gallery</string>
    <string name="batch">Batch</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="favorite_history">Favorite History</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="url">URL</string>
    <string name="wifi">WiFi</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="text">Text</string>
    <string name="web_search">Web search</string>
    <string name="web_search_">Web Search</string>
    <string name="send_email">Send email</string>
    <string name="send_sms">Send SMS</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="still_have_problems">Still have problems</string>
    <string name="code_can_t_be_read">Code can’t be read?</string>
    <string name="_1_in_order_to_get_accurate_scanning_results_please_make_sure_that_the_code_meets_the_following_characteristics">1. In order to get accurate scanning results, please make sure that the code meets the following characteristics:</string>
    <string name="_2_if_you_are_using_a_low_end_phone_scanning_may_be_very_difficult_or_even_impossible_due_to_the_low_camera_quality">2. If you are using a low-end phone, scanning may be very difficult or even impossible due to the low camera quality.</string>
    <string name="you_could_try_to_take_a_photo_with_your_camera_app_then_open_our_app_and_tap_scan_from_the_gallery_to_solve_this_problem">You could try to take a photo with your camera app, then open our app and tap \'Scan from the gallery\' to solve this problem.</string>
    <string name="_3_if_you_still_can_t_get_the_result_when_scanning_the_barcode_or_qr_code_please_send_an_email_via_feedback_to_us_we_will_solve_the_problem_for_you_as_soon_as_possible">3. If you still can\'t get the result when scanning the barcode or QR code, please send an email via feedback to us, we will solve the problem for you as soon as possible.</string>
    <string name="c_complete_with_no_missing_parts">c. complete, with no missing parts.</string>
    <string name="complete">complete</string>
    <string name="feedback">feedback</string>
    <string name="no_light_reflections_or_shadows">no light reflections or shadows</string>
    <string name="b_no_light_reflections_or_shadows_on_the_code">b. no light reflections or shadows on the code.</string>
    <string name="not_blurry">not blurry</string>
    <string name="a_rich_contrast_and_not_blurry">a. rich contrast and not blurry.</string>
    <string name="can_t_connect_to_wi_fi">Can’t connect to Wi-Fi?</string>
    <string name="within_the_wi_fi_coverage_area">within the Wi-Fi coverage area</string>
    <string name="_1_make_sure_you_are_within_the_wi_fi_coverage_area_and_the_wi_fi_username_and_password_are_correct">1. Make sure you are within the Wi-Fi coverage area, and the Wi-Fi username and password are correct.</string>
    <string name="if_you_still_can_t_connect_please_ask_the_qr_code_provider_whether_the_password_has_been_changed">If you still can\'t connect, please ask the QR code provider whether the password has been changed.</string>
    <string name="_2_if_the_scan_result_is_displayed_as_text_you_need_to_manually_connect_to_wi_fi_in_your_phone_s_network_settings_based_on_the_wi_fi_name_and_password_provided_in_the_text">2. If the scan result is displayed as text, you need to manually connect to Wi-Fi in your phone\'s network settings based on the Wi-Fi name and password provided in the text.</string>
    <string name="manually_connect_to_wi_fi">manually connect to Wi-Fi</string>
    <string name="have_problem_with_the_link_you_get">Have problem with the link you get?</string>
    <string name="_1_this_app_can_t_change_the_content_of_the_qr_code_so_if_you_can_t_open_this_website_it_is_more_likely_that_there_is_a_problem_with_the_website_itself_unfortunately_there_is_nothing_we_can_do_about_it">1. This app can\'t change the content of the QR code, so if you can\'t open this website, it is more likely that there is a problem with the website itself. Unfortunately, there is nothing we can do about it.</string>
    <string name="_2_it_is_also_possible_that_the_creator_of_the_qr_code_entered_the_wrong_link_or_the_qr_code_has_expired_causing_you_to_be_unable_to_open_the_website_if_possible_you_can_try_to_confirm_the_correctness_of_the_qr_code_with_the_creator">2. It is also possible that the creator of the QR code entered the wrong link or the QR code has expired, causing you to be unable to open the website. If possible, you can try to confirm the correctness of the QR code with the creator.</string>
    <string name="_3_in_particular_some_web_links_need_to_be_opened_under_special_conditions_for_example_they_need_to_be_opened_using_a_certain_app_please_follow_the_instructions_of_the_qr_code_provider">3. In particular, some web links need to be opened under special conditions, for example, they need to be opened using a certain app. Please follow the instructions of the QR code provider.</string>
    <string name="website_itself">website itself</string>
    <string name="wrong_link">wrong link</string>
    <string name="certain_app">certain app</string>
    <string name="need_more_information">Need more information?</string>
    <string name="there_is_too_much_information_and_we_may_not_be_able_to_provide_the_information_you_want_every_time_you_can_check_for_more_information_through_web_search">There is too much information and we may not be able to provide the information you want every time. You can check for more information through Web Search.</string>
    <string name="if_web_search_still_can_t_help_you_find_the_information_you_are_looking_for_it_may_be_that_the_code_itself_contains_limited_information_please_understand">If Web Search still can\'t help you find the information you are looking for, it may be that the code itself contains limited information. Please understand.</string>
    <string name="expired">expired</string>
    <string name="what_problems_did_you_encounter">What problems did you encounter?</string>
    <string name="scanning_not_working">Scanning not working</string>
    <string name="ads">Ads</string>
    <string name="others">Others</string>
    <string name="need_more_information_after_scanning">Need more information after scanning</string>
    <string name="please_tell_us_more_details_so_that_we_can_locate_and_solve_your_problem_faster_at_least_6_characters">Please tell us more details so that we can locate and solve your problem faster (at least 6 characters)</string>
    <string name="submit">SUBMIT</string>
    <string name="general_settings">General settings</string>
    <string name="beep">Beep</string>
    <string name="beep_when_the_scan_is_successful">Beep when the scan is successful</string>
    <string name="auto_copied_to_clipboard">Auto-copied to clipboard</string>
    <string name="google">Google</string>
    <string name="search_engine">Search engine</string>
    <string name="english">English</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="report_bugs_and_tell_us_what_to_improve">Report bugs and tell us what to improve</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="rate_us">Rate Us</string>
    <string name="thank_you_for_your_support">Thank you for your support!</string>
    <string name="we_would_be_very_grateful_if_you_can_rate_us">We would be very grateful if you can rate us.</string>
    <string name="oh_we_re_sorry">Oh, we’re sorry...</string>
    <string name="much_appreciated">Much appreciated!</string>
    <string name="your_feedback_is_welcome">Your feedback is welcome</string>
    <string name="your_support_is_our_biggest_motivation">Your support is our biggest motivation!</string>
    <string name="thanks_for_your_feedback_we_ll_improve_your_experience">Thanks for your feedback! We\'ll improve your experience.</string>
    <string name="bing">Bing</string>
    <string name="yahoo">Yahoo</string>
    <string name="duckduckgo">DuckDuckGo</string>
    <string name="ecosia">Ecosia</string>
    <string name="yandex">Yandex</string>
    <string name="rate">RATE</string>
    <string name="the_best_we_can_get">The best we can get</string>
    <string name="_1_avoid_light_reflection_or_shadow_on_the_code">1. Avoid light reflection or shadow on the code</string>
    <string name="point_your_camera_at_the_code_to_auto_scan">Point your camera at the code to auto scan</string>
    <string name="_2_make_your_phone_face_the_code_without_tilting">2. Make your phone face the code without tilting</string>
    <string name="ok">OK</string>
    <string name="shadow">shadow</string>
    <string name="reflection">reflection</string>
    <string name="without_tilting">without tilting</string>
    <string name="no_problems_selected">No problems selected</string>
    <string name="number_of_attached_images">\n\nNumber of attached images: %1$d</string>
    <string name="are_you_sure_you_want_to_exit_the_application">Are you sure you want to exit the application?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="feedback_or_suggestion">Feedback or suggestion</string>
    <string name="share_qr_content">Share QR Content</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_screen_for">Open screen for %1$s</string>
    <string name="start_scanning_to_see_your_history">Start scanning to see your history</string>
    <string name="clear_history">Clear History</string>
    <string name="are_you_sure_you_want_to_clear_history">Are you sure you want to clear history?</string>
    <string name="view_all">View all</string>
    <string name="no_history_found">No history found</string>
    <string name="scan_a_qr_code_to_see_it_listed_here">Scan a QR code to see it listed here.</string>
    <string name="flashlight">Flashlight</string>
</resources>