<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_nav"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/clear_history"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:text="@string/are_you_sure_you_want_to_clear_history"
        android:textColor="@color/txt_color_grey"
        android:textSize="@dimen/_14ssp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/bg_submit_button"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/yes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:backgroundTint="@color/txt_color_blue" />

    <TextView
        android:id="@+id/tvNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/no"
        android:textColor="@color/txt_color_grey"
        android:textSize="@dimen/_14ssp" />

</LinearLayout>
