<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".presentetion.FeedbackActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_icon_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llHeader"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:background="@color/bg_color"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_bold"
            android:text="@string/what_problems_did_you_encounter"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

        <ImageView
            android:layout_width="@dimen/_66sdp"
            android:layout_height="@dimen/_66sdp"
            android:src="@drawable/ic_feedback_face" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llTitle"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_feedback"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTitle"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_14sdp">

            <TextView
                android:id="@+id/btnScanning"
                style="@style/ProblemButton"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/scanning_not_working" />

            <TextView
                android:id="@+id/btnAds"
                style="@style/ProblemButton"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/ads" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp">

            <TextView
                android:id="@+id/btnInfo"
                style="@style/ProblemButton"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/need_more_information_after_scanning" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp">

            <TextView
                android:id="@+id/btnOther"
                style="@style/ProblemButton"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/others" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@color/txt_color_grey" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:fontFamily="@font/inter_regular"
            android:gravity="top|start"
            android:hint="@string/please_tell_us_more_details_so_that_we_can_locate_and_solve_your_problem_faster_at_least_6_characters"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/txt_color_grey" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvImages"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:orientation="horizontal" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnCamera"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/btnSubmit"
        android:layout_margin="@dimen/_14sdp"
        android:background="@drawable/bg_problem_button"
        android:src="@drawable/ic_icon_cemara" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/bg_submit_button"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:backgroundTint="@color/txt_color_grey" />

</RelativeLayout>