<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/layoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_bottomsheet_rounded"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/thank_you_for_your_support"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/we_would_be_very_grateful_if_you_can_rate_us"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:id="@+id/starContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivStar1"
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:padding="18dp"
                            android:src="@drawable/ic_icon_grey_star" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivStar2"
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:padding="18dp"
                            android:src="@drawable/ic_icon_grey_star" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivStar3"
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:padding="18dp"
                            android:src="@drawable/ic_icon_grey_star" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivStar4"
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:padding="18dp"
                            android:src="@drawable/ic_icon_grey_star" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivStar5"
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:padding="18dp"
                            android:src="@drawable/ic_icon_star" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/topBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/the_best_we_can_get"
                        android:textAlignment="textEnd"
                        android:textColor="#FFB01F"
                        tools:ignore="RtlCompat" />

                    <ImageView
                        android:id="@+id/btnMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_14sdp"
                        android:padding="8dp"
                        android:src="@drawable/ic_icon_yellow_arrow" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:background="@drawable/bg_submit_button"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/rate"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:backgroundTint="@color/txt_color_grey" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgEmoji"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:elevation="6dp"
        android:src="@drawable/emoji_zero" />

</RelativeLayout>